compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__opaque_external_type_raises_a_warning.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1286
expression: pub opaque type External
snapshot_kind: text
---
----- SOURCE CODE
pub opaque type External

----- WARNING
warning: Opaque external type
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ pub opaque type External
  │ ^^^^^^^^^^^^^^^^^^^^^^^^

This type has no constructors so making it opaque is redundant.
Hint: Remove the `opaque` qualifier from the type definition.
