compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__panic_used_as_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1695
expression: "pub fn main() {\n          panic()\n        }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
          panic()
        }

----- WARNING
warning: Panic used as a function
  ┌─ /src/warning/wrn.gleam:2:11
  │
2 │           panic()
  │           ^^^^^^^

`panic` is not a function, you can just write `panic` instead of `panic()`.
