compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__panic_used_as_function_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1713
expression: "pub fn main() {\n          panic(1, Nil)\n        }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
          panic(1, Nil)
        }

----- WARNING
warning: Panic used as a function
  ┌─ /src/warning/wrn.gleam:2:17
  │
2 │           panic(1, Nil)
  │                 ^^^^^^

`panic` is not a function and will crash before it can do anything with
these arguments.

Hint: if you want to display an error message you should write
`panic as "my error message"`
See: https://tour.gleam.run/advanced-features/panic/
