compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__pattern_matching_on_64_float_float_is_unreachable.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4029
expression: "\npub fn go(x) {\n  case x {\n    <<_:64-float>> -> \"Float\"\n    <<_:64-float>> -> \"unreachable\"\n    _ -> \"Other\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<_:64-float>> -> "Float"
    <<_:64-float>> -> "unreachable"
    _ -> "Other"
  }
}


----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:5:5
  │
5 │     <<_:64-float>> -> "unreachable"
  │     ^^^^^^^^^^^^^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
