compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__pattern_matching_on_literal_empty_list.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1198
expression: "pub fn main() {\n        case [] {\n            _ -> Nil\n        }\n      }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
        case [] {
            _ -> Nil
        }
      }

----- WARNING
warning: Match on a literal value
  ┌─ /src/warning/wrn.gleam:2:14
  │
2 │         case [] {
  │              ^^ There's no need to pattern match on this value

Matching on a literal value is redundant since you can already tell which
branch is going to match with this value.
