compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__pattern_matching_on_literal_float.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1260
expression: "\npub type Wibble { Wibble }\npub fn main() {\n  case 1.0 {\n    _ -> Nil\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble { Wibble }
pub fn main() {
  case 1.0 {
    _ -> Nil
  }
}

----- WARNING
warning: Match on a literal value
  ┌─ /src/warning/wrn.gleam:4:8
  │
4 │   case 1.0 {
  │        ^^^ There's no need to pattern match on this value

Matching on a literal value is redundant since you can already tell which
branch is going to match with this value.
